@@ -19,12 +19,15 @@
 package ddf.minim.javasound;
 
 import java.io.BufferedInputStream;
+import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+
 import java.util.HashMap;
 import java.util.Map;
 
@@ -40,8 +43,6 @@ import javax.sound.sampled.SourceDataLine;
 import javax.sound.sampled.TargetDataLine;
 import javax.sound.sampled.UnsupportedAudioFileException;
 
-import org.tritonus.share.sampled.AudioUtils;
-import org.tritonus.share.sampled.file.TAudioFileFormat;
 
 import ddf.minim.AudioMetaData;
 import ddf.minim.AudioSample;
@@ -53,7 +54,6 @@ import ddf.minim.spi.AudioRecordingStream;
 import ddf.minim.spi.AudioStream;
 import ddf.minim.spi.MinimServiceProvider;
 import ddf.minim.spi.SampleRecorder;
-import javazoom.spi.mpeg.sampled.file.MpegAudioFormat;
 
 /**
  * JSMinim is an implementation of the {@link MinimServiceProvider} interface that use
@@ -74,7 +74,7 @@ public class JSMinim implements MinimServiceProvider
 
 	public JSMinim(Object parent)
 	{
-		debug = false;
+		debug = true;
 		fileLoader = parent;
 		inputMixer = null;
 		outputMixer = null;
@@ -246,7 +246,8 @@ public class JSMinim implements MinimServiceProvider
 			}
 			else
 			{
-				recorder = new JSStreamingSampleRecorder(this,
+				// TODO: Implement JSStreamingSampleRecorder for non-buffered recording
+				recorder = new JSBufferedSampleRecorder(this,
 														 destPath,
 														 fileType,
 														 source.getFormat(),
@@ -277,9 +278,8 @@ public class JSMinim implements MinimServiceProvider
 			debug("Reading from " + ais.getClass().toString());
 			debug("File format is: " + ais.getFormat().toString());
 			AudioFormat format = ais.getFormat();
-			// special handling for mp3 files because
-			// they need to be converted to PCM
-			if (format instanceof MpegAudioFormat)
+			// convert to PCM if the decoded stream isn't already PCM
+			if (!AudioFormat.Encoding.PCM_SIGNED.equals(format.getEncoding()))
 			{
 				AudioFormat baseFormat = format;
 				format = new AudioFormat(AudioFormat.Encoding.PCM_SIGNED,
@@ -289,6 +289,7 @@ public class JSMinim implements MinimServiceProvider
 													baseFormat.getSampleRate(), false);
 				// converts the stream to PCM audio from mp3 audio
 				AudioInputStream decAis = getAudioInputStream(format, ais);
+				debug("MP3 conversion: original format=" + baseFormat + ", target format=" + format + ", decoded stream=" + (decAis != null ? "success" : "failed"));
 				// source data line is for sending the file audio out to the
 				// speakers
 				SourceDataLine line = getSourceDataLine(format, bufferSize);
@@ -315,7 +316,7 @@ public class JSMinim implements MinimServiceProvider
 				SourceDataLine line = getSourceDataLine(format, bufferSize);
 				if (line != null)
 				{
-					long length = AudioUtils.frames2Millis(ais.getFrameLength(), format);
+					long length = (long)((ais.getFrameLength() * 1000.0) / format.getFrameRate());
 					BasicMetaData meta = new BasicMetaData(filename, length, ais.getFrameLength());
 					mstream = new JSPCMAudioRecordingStream(this, meta, ais, line, bufferSize);
 				}
@@ -324,34 +325,32 @@ public class JSMinim implements MinimServiceProvider
 		return mstream;
 	}
 
-	@SuppressWarnings("unchecked")
 	private Map<String, Object> getID3Tags(String filename)
 	{
 		debug("Getting the properties.");
 		Map<String, Object> props = new HashMap<String, Object>();
 		try
 		{
-			MpegAudioFileReader reader = new MpegAudioFileReader(this);
-			InputStream stream = (InputStream)createInput.invoke(fileLoader, filename);
-			if ( stream != null )
-			{
-				AudioFileFormat baseFileFormat = reader.getAudioFileFormat(
-																								stream,
-																								stream.available());
-				stream.close();
-				if (baseFileFormat instanceof TAudioFileFormat)
-				{
-					TAudioFileFormat fileFormat = (TAudioFileFormat)baseFileFormat;
-					props = (Map<String, Object>)fileFormat.properties();
-					if (props.size() == 0)
-					{
-						error("No file properties available for " + filename + ".");
-					}
-					else
-					{
-						debug("File properties: " + props.toString());
-					}
+			// Try to get file format directly from file for accurate metadata
+			AudioFileFormat baseFileFormat = AudioSystem.getAudioFileFormat(new File(filename));
+			// If properties are available, get them
+			try {
+				Map<String, Object> p = baseFileFormat.properties();
+				if (p != null) props = p;
+			} catch (Exception ignore) { }
+			// If duration not in properties, calculate from frameLength and frameRate
+			if (!props.containsKey("duration")) {
+				long frameLength = baseFileFormat.getFrameLength();
+				float frameRate = baseFileFormat.getFormat().getFrameRate();
+				if (frameLength > 0 && frameRate > 0) {
+					long durationMicros = (long)((frameLength / frameRate) * 1000000);
+					props.put("duration", durationMicros);
 				}
+			}
+			// Now open stream for additional processing if needed
+			InputStream stream = (InputStream)createInput.invoke(fileLoader, filename);
+			if (stream != null) {
+				stream.close(); // close immediately since we have the format
 			}
 		}
 		catch (UnsupportedAudioFileException e)
@@ -387,6 +386,7 @@ public class JSMinim implements MinimServiceProvider
 		return null;
 	}
 
+	@SuppressWarnings("deprecation")
 	public AudioSample getAudioSample(String filename, int bufferSize)
 	{
 		AudioInputStream ais = getAudioInputStream(filename);
@@ -395,7 +395,7 @@ public class JSMinim implements MinimServiceProvider
 			AudioMetaData meta = null;
 			AudioFormat format = ais.getFormat();
 			FloatSampleBuffer samples = null;
-			if (format instanceof MpegAudioFormat)
+			if (!AudioFormat.Encoding.PCM_SIGNED.equals(format.getEncoding()))
 			{
 				AudioFormat baseFormat = format;
 				format = new AudioFormat(AudioFormat.Encoding.PCM_SIGNED,
@@ -412,15 +412,20 @@ public class JSMinim implements MinimServiceProvider
 				// be much shorter than the decoded version. so we use the
 				// duration of the file to figure out how many bytes the
 				// decoded file will be.
-				long dur = ((Long)props.get("duration")).longValue();
-				int toRead = (int)AudioUtils.millis2Bytes(dur / 1000, format);
-				samples = loadFloatAudio(ais, toRead);
-				meta = new MP3MetaData(filename, dur / 1000, props);
+				if (props.containsKey("duration")) {
+					long dur = ((Long)props.get("duration")).longValue();
+					int toRead = (int)(((dur / 1000.0) * format.getFrameRate()) * format.getFrameSize());
+					samples = loadFloatAudio(ais, toRead);
+					meta = new MP3MetaData(filename, dur / 1000, props);
+				} else {
+					error("Cannot load MP3 file without duration metadata.");
+					return null;
+				}
 			}
 			else
 			{
 				samples = loadFloatAudio(ais, (int)ais.getFrameLength() * format.getFrameSize());
-				long length = AudioUtils.frames2Millis(samples.getSampleCount(), format);
+				long length = (long)((samples.getSampleCount() * 1000.0) / format.getFrameRate());
 				meta = new BasicMetaData(filename, length, samples.getSampleCount());
 			}
 			AudioOut out = getAudioOutput(format.getChannels(), 
@@ -456,6 +461,7 @@ public class JSMinim implements MinimServiceProvider
     return getAudioSampleImp(sample, format, bufferSize);
   }
   
+	@SuppressWarnings("deprecation")
   private JSAudioSample getAudioSampleImp(FloatSampleBuffer samples, AudioFormat format, int bufferSize)
   {
     AudioOut out = getAudioOutput( samples.getChannelCount(), 
@@ -467,7 +473,7 @@ public class JSMinim implements MinimServiceProvider
     {
       SampleSignal ssig = new SampleSignal(samples);
       out.setAudioSignal(ssig);
-      long length = AudioUtils.frames2Millis(samples.getSampleCount(), format);
+      long length = (long)((samples.getSampleCount() * 1000.0) / format.getFrameRate());
       BasicMetaData meta = new BasicMetaData(samples.toString(), length, samples.getSampleCount());
       return new JSAudioSample(meta, ssig, out);
     }
@@ -504,7 +510,7 @@ public class JSMinim implements MinimServiceProvider
 		if (ais != null)
 		{
 			AudioFormat format = ais.getFormat();
-			if (format instanceof MpegAudioFormat)
+			if (!AudioFormat.Encoding.PCM_SIGNED.equals(format.getEncoding()))
 			{
 				AudioFormat baseFormat = format;
 				format = new AudioFormat(AudioFormat.Encoding.PCM_SIGNED,
@@ -561,7 +567,7 @@ public class JSMinim implements MinimServiceProvider
 		if (ais != null)
 		{
 			AudioFormat format = ais.getFormat();
-			if (format instanceof MpegAudioFormat)
+			if (!AudioFormat.Encoding.PCM_SIGNED.equals(format.getEncoding()))
 			{
 				AudioFormat baseFormat = format;
 				format = new AudioFormat(AudioFormat.Encoding.PCM_SIGNED,
@@ -579,14 +585,14 @@ public class JSMinim implements MinimServiceProvider
 				// duration of the file to figure out how many bytes the
 				// decoded file will be.
 				long dur = ((Long)props.get("duration")).longValue();
-				int toRead = (int)AudioUtils.millis2Bytes(dur / 1000, format);
+				int toRead = (int)(((dur / 1000.0) * format.getFrameRate()) * format.getFrameSize());
 				samples = loadByteAudio(ais, toRead);
 				meta = new MP3MetaData(filename, dur / 1000, props);
 			}
 			else
 			{
 				samples = loadByteAudio(ais, (int)ais.getFrameLength() * format.getFrameSize());
-				long length = AudioUtils.bytes2Millis(samples.length, format);
+				long length = (long)((samples.length * 1000.0) / (format.getFrameRate() * format.getFrameSize()));
 				meta = new BasicMetaData(filename, length, samples.length);
 			}
 			SourceDataLine line = getSourceDataLine(format, 2048);
@@ -666,9 +672,10 @@ public class JSMinim implements MinimServiceProvider
 		{
 			try
 			{
-				ais = getAudioInputStream(new URL(filename));
+				URI uri = new URI(filename);
+				ais = getAudioInputStream(uri);
 			}
-			catch (MalformedURLException e)
+			catch (URISyntaxException | MalformedURLException e)
 			{
 				error("Bad URL: " + e.getMessage());
 			}
@@ -726,13 +733,11 @@ public class JSMinim implements MinimServiceProvider
 	 * @throws UnsupportedAudioFileException
 	 * @throws IOException
 	 */
-	AudioInputStream getAudioInputStream(URL url)
+	AudioInputStream getAudioInputStream(URI uri)
 			throws UnsupportedAudioFileException, IOException
 	{
-
-		// alexey fix: we use MpegAudioFileReaderWorkaround with URL and user
-		// agent
-		return new MpegAudioFileReaderWorkaround(this).getAudioInputStream(url, null);
+		// Use standard AudioSystem for URL input
+		return AudioSystem.getAudioInputStream(uri.toURL());
 	}
 
 	/**
@@ -751,15 +756,7 @@ public class JSMinim implements MinimServiceProvider
 	AudioInputStream getAudioInputStream(InputStream is)
 			throws UnsupportedAudioFileException, IOException
 	{
-		try
-		{
-			return AudioSystem.getAudioInputStream(is);
-		}
-		catch (Exception iae)
-		{
-			debug("Using AppletMpegSPIWorkaround to get codec");
-			return new MpegAudioFileReader(this).getAudioInputStream(is);
-		}
+		return AudioSystem.getAudioInputStream(is);
 	}
 
 	/**
@@ -779,25 +776,11 @@ public class JSMinim implements MinimServiceProvider
 	AudioInputStream getAudioInputStream(AudioFormat targetFormat,
 			AudioInputStream sourceStream)
 	{
-		try
-		{
-			return AudioSystem.getAudioInputStream(targetFormat, sourceStream);
-		}
-		catch (IllegalArgumentException iae)
-		{
-			debug("Using AppletMpegSPIWorkaround to get codec");
-			try
-			{
-				Class.forName("javazoom.spi.mpeg.sampled.convert.MpegFormatConversionProvider");
-				return new javazoom.spi.mpeg.sampled.convert.MpegFormatConversionProvider().getAudioInputStream(
-																																				targetFormat,
-																																				sourceStream);
-			}
-			catch (ClassNotFoundException cnfe)
-			{
-				throw new IllegalArgumentException("Mpeg codec not properly installed");
-			}
-		}
+		        try {
+            return AudioSystem.getAudioInputStream(targetFormat, sourceStream);
+        } catch (IllegalArgumentException iae) {
+            throw new UnsupportedOperationException("MPEG format conversion not supported: " + iae.getMessage());
+        }
 	}
 
 	SourceDataLine getSourceDataLine(AudioFormat format, int bufferSize)
@@ -841,6 +824,22 @@ public class JSMinim implements MinimServiceProvider
 		{
 			error("Unable to return a SourceDataLine: unsupported format - " + format.toString());
 		}
+
+		if ( line == null )
+		{
+			debug("Falling back to NullSourceDataLine for headless playback.");
+			line = new NullSourceDataLine();
+			try
+			{
+				line.open(format, Math.max(1, bufferSize * format.getFrameSize()));
+			}
+			catch (LineUnavailableException e)
+			{
+				error("NullSourceDataLine unexpectedly unavailable: " + e.getMessage());
+				return null;
+			}
+		}
+
 		return line;
 	}
 
